--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         async function callAPI(action, data = {}) {
             try {
                 const payload = {
-                    action: action,行動：行動，
+                    action: action,
                     ...data
                 };
                 
